# KaggleProjects

./: notes.txt  submission.csv  titanic.py
HedgeFund/: data_processing.py  hedgefund.ipynb  models.py  notes.txt  results.txt  runhedgefund.py  test_data_processing.py  train_data_processing.py
HedgeFund/neural-xgboost-project/: README.md  pyproject.toml  requirements.txt
HedgeFund/neural-xgboost-project/src/: app.py
HedgeFund/neural-xgboost-project/src/models/: pytorch_model.py  xgboost_model.py
HedgeFund/neural-xgboost-project/src/training/: train_pytorch.py  train_xgboost.py
HedgeFund/neural-xgboost-project/src/utils/: device.py
Titanic-folder/: titanic.py  titanicjyptr.ipynb
